# rust-nix-template

./: .gitignore  Cargo.toml  README.md  flake.nix  release-plz.toml  requirements.txt  rust-toolchain.toml  taplo.toml
.direnv/: flake-profile-3-link
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  release-plz.yml  rustdocs.yaml
docs/source/: conf.py  index.rst  sample_docs.rst
docs/source/_templates/: versioning.html
src/: lib.rs  main.rs
