[package]
name = "rust-nix-template"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A comprehensive Rust project template with Nix, automated releases, and documentation"
repository = "https://github.com/ocasazza/rust-nix-template"
homepage = "https://ocasazza.github.io/rust-nix-template/"
documentation = "https://ocasazza.github.io/rust-nix-template/"
readme = "README.md"
keywords = ["template", "nix", "automation", "documentation", "rust"]
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_nix_template"
path = "src/lib.rs"

[[bin]]
name = "rust-nix-template"
path = "src/main.rs"

[dependencies]
sphinx-rustdocgen = "1.0.0"
